nav3 which is for categories has been created + heigh of slider fixed +visible and hidden of news in diffrent sizes is avaible now

--- a/festival/msn/style.css
+++ b/festival/msn/style.css
@@ -37,7 +37,55 @@
     color: white;
     background-color:blue;
 }
+.nav2 ul{
+    padding-inline-start: 0;
+    text-align: left;
+
+}
 .nav2 li{
     display: inline;
     padding-right: 1rem;
+}
+.nav2 a{
+    color: #666666;
+}
+.max-height-1{
+    max-height: 150px;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+}
+.max-height-2{
+    max-height: 300px;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+}
+.max-height-3{
+    max-height: 450px;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+}
+.carousel-item img{
+    max-width: 100%;
+}
+.category{
+    border-top-style:solid;
+    border-top-color:purple;
+    border-top-width:1px;
+}
+.category li{
+    display: inline;
+    padding-right: 1rem;
+
+}
+.category ul{
+    padding-inline-start: 0;
+}
+.category a{
+    color: #666666;
+}
+.category h5 a{
+    color: purple;
+}
+.category a:hover{
+    color: purple;
 }
